chore: Make alignment of spinner correct with input

--- a/src/app/authentication/credentials/credentials.component.scss
+++ b/src/app/authentication/credentials/credentials.component.scss
@@ -36,7 +36,7 @@
   }
 }
 
-mat-form-field, .container-mobile {
+mat-form-field, .container-mobile, app-username-validation-errors {
   width: 80%;
 }
 
