--- a/src/app/shared/modules/username-validation-errors/username-validation-errors.component.scss
+++ b/src/app/shared/modules/username-validation-errors/username-validation-errors.component.scss
@@ -1,1 +1,5 @@
 @use '../../../shared/styles/messages.scss';
+
+body {
+  width: 100%;
+}
