--- a/src/app/shared/styles/messages.scss
+++ b/src/app/shared/styles/messages.scss
@@ -7,6 +7,6 @@
 .valid-select {
   color: black
 }
-app-username-validation-errors {
+.invalid, .valid {
   width: 80%;
 }
